--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -23,10 +23,12 @@
  * Modules
  * 1. Header Module
  * 2. Footer Module
+ * 3. Main Module
  */
 
 @import "./modules/header";
 @import "./modules/footer";
+@import "./modules/main";
 
 /**
  * Objects
