--- a/_includes/layouts/default.njk
+++ b/_includes/layouts/default.njk
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jamie Bradley | JAMstack Developer</title>
+    <title>HeySugar | Diabetes Management with Jamstack</title>
     <meta name="Description" content="Site description">
 
     <style>{% include "css/styles.css" %}</style>
@@ -14,7 +14,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p>Docs created with with 11ty</p>
+        <p>Project created by <a href="https://bradders.dev" target="_blank">Jamie Bradley</a></p>
       </div>
     </footer>
   </body>
