--- a/resources/scss/modules/_header.scss
+++ b/resources/scss/modules/_header.scss
@@ -15,6 +15,26 @@
     }
   }
 
+  .header__subtitle {
+    font-size: 2.25rem;
+    margin-top: 0;
+    margin-bottom: 1.5rem;
+
+    @media screen and (min-width: 768px) {
+      font-size: 3.5rem;
+    }
+  }
+
+  .header__list,
+  .header__lede {
+    font-size: 1.5rem;
+    line-height: 1.35;
+
+    @media screen and (min-width: 768px) {
+      font-size: 2rem;
+    }
+  }
+
   .header__back-link {
     font-size: 1.5rem;
 
