--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -379,13 +379,29 @@ body {
  * the core content, excluding the main <header>
  * and <footer>
  */
-.main .main__subtitle {
+.main h1,
+.main h2,
+.main h3 {
   font-size: 2.25rem;
   margin-top: 0;
   margin-bottom: 1.5rem; }
   @media screen and (min-width: 768px) {
-    .main .main__subtitle {
+    .main h1,
+    .main h2,
+    .main h3 {
       font-size: 3.5rem; } }
+
+.main h4,
+.main h5,
+.main h6 {
+  font-size: 2rem;
+  margin-top: 0;
+  margin-bottom: 1.5rem; }
+  @media screen and (min-width: 768px) {
+    .main h4,
+    .main h5,
+    .main h6 {
+      font-size: 2.75rem; } }
 
 .main p,
 .main ul {
@@ -396,10 +412,16 @@ body {
     .main ul {
       font-size: 2rem; } }
 
+.main p:last-of-type {
+  margin-top: 0; }
+
 .main a {
   color: #7d55db; }
   .main a:hover {
     color: #9473e2; }
+
+.main pre {
+  margin-top: 3rem; }
 
 /**
  * Objects
@@ -464,3 +486,145 @@ body {
   border-bottom: 6px solid #9473e2;
   max-width: 850px;
   margin: 0 auto; }
+
+/**
+ * Syntax Highlighting
+ */
+/**
+ * Nord Theme Originally by Arctic Ice Studio
+ * https://nordtheme.com
+ *
+ * Ported for PrismJS by Zane Hitchcoxc (@zwhitchcox) and Gabriel Ramos (@gabrieluizramos)
+ */
+code[class*="language-"],
+pre[class*="language-"] {
+  color: #f8f8f2;
+  background: none;
+  font-family: "Menlo", Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 1.5;
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none; }
+
+/* Code blocks */
+pre[class*="language-"] {
+  padding: 1em;
+  margin: 0.5em 0;
+  overflow: auto;
+  border-radius: 0.3em; }
+
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+  background: #2e3440; }
+
+/* Inline code */
+:not(pre) > code[class*="language-"] {
+  padding: 0.1em;
+  border-radius: 0.3em;
+  white-space: normal; }
+
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  color: #636f88; }
+
+.token.punctuation {
+  color: #81a1c1; }
+
+.namespace {
+  opacity: 0.7; }
+
+.token.property,
+.token.tag,
+.token.constant,
+.token.symbol,
+.token.deleted {
+  color: #81a1c1; }
+
+.token.number {
+  color: #b48ead; }
+
+.token.boolean {
+  color: #81a1c1; }
+
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
+  color: #a3be8c; }
+
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string,
+.token.variable {
+  color: #81a1c1; }
+
+.token.atrule,
+.token.attr-value,
+.token.function,
+.token.class-name {
+  color: #88c0d0; }
+
+.token.keyword {
+  color: #81a1c1; }
+
+.token.regex,
+.token.important {
+  color: #ebcb8b; }
+
+.token.important,
+.token.bold {
+  font-weight: bold; }
+
+.token.italic {
+  font-style: italic; }
+
+.token.entity {
+  cursor: help; }
+
+.highlight-line {
+  display: inline-block;
+  /* del, ins, mark default styles */
+  text-decoration: none;
+  color: inherit; }
+
+/* allow highlighting empty lines */
+.highlight-line:empty:before {
+  content: " "; }
+
+.highlight-line:not(:last-child) {
+  min-width: 100%; }
+
+.highlight-line .highlight-line:not(:last-child) {
+  min-width: 0; }
+
+/*
+ * Dark theme
+ */
+.highlight-line-isdir {
+  color: #b0b0b0;
+  background-color: #222; }
+
+.highlight-line-active {
+  background-color: #444;
+  background-color: rgba(69, 69, 69, 0.8); }
+
+.highlight-line-add {
+  background-color: #45844b; }
+
+.highlight-line-remove {
+  background-color: #902f2f; }
