--- a/index.njk
+++ b/index.njk
@@ -42,7 +42,7 @@ layout: layouts/default.njk
     <h3 class="main__subtitle">Want to Get Started?</h3>
 
     <p>
-      Head over to our <a href="/documentation">documentation</a> for information on getting started and don't forget,
+      Head over to our <a href="/documentation/getting-started">documentation</a> for information on getting started and don't forget,
       if you experience any problems then <a href="https://github.com/HeySugar/hey-sugar-app" target="_blank">raise an issue on our github</a>.
       Better yet, if you want to contribute then Pull Requests are welcome!
     </p>
