--- a/_includes/layouts/default.njk
+++ b/_includes/layouts/default.njk
@@ -11,12 +11,33 @@
   <body>
     <header class="header">
       <div class="container">
+        <nav class="navigation">
+          <a href="/" class="navigation__logo logo">HeySugar</a>
+
+          <ul class="navigation__list">
+            <li class="navigation__list-item">
+              <a class="navigation__link" href="/">Home</a>
+            </li>
+            <li class="navigation__list-item">
+              <a class="navigation__link" href="/documentation">Docs</a>
+            </li>
+            <li class="navigation__list-item">
+              <a class="navigation__link" href="https://github.com/HeySugar/hey-sugar-app" target="_blank">
+                Github
+              </a>
+            </li>
+          </ul>
+        </nav>
+
         {% if backLink %}
         <p class="header__back-link">
           <a href="{{ backLink.path }}">← {{ backLink.title }}</a>
         </p>
         {% endif %}
-        <h1 class="header__title">{{ title }}</h1>
+
+        {% if title %}
+          <h1 class="header__title">{{ title }}</h1>
+        {% endif %}
       </div>
     </header>
 
