--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -11,13 +11,19 @@
 @import "./config/_variables.scss";
 
 /**
- * Base Elements
+ * Base Styles
  * 1. HTML Element
  * 2. Body Element
  */
 
 @import "./base/html";
 @import "./base/body";
+
+/**
+ * Element Styles
+ */
+
+@import "./elements/link";
 
 /**
  * Modules
@@ -29,6 +35,7 @@
 @import "./modules/header";
 @import "./modules/footer";
 @import "./modules/main";
+@import "./modules/nav";
 
 /**
  * Objects
@@ -44,3 +51,4 @@
 
 @import "./components/card";
 @import "./components/highlight";
+@import "./components/logo";
