--- a/resources/scss/modules/_main.scss
+++ b/resources/scss/modules/_main.scss
@@ -9,12 +9,12 @@
   h1,
   h2,
   h3 {
-    font-size: 2.25rem;
+    font-size: 2rem;
     margin-top: 0;
     margin-bottom: 1.5rem;
 
     @media screen and (min-width: 768px) {
-      font-size: 3.5rem;
+      font-size: 2.5rem;
     }
   }
 
@@ -32,11 +32,12 @@
 
   p,
   ul {
-    font-size: 1.5rem;
+    font-size: 1rem;
     line-height: 1.35;
 
     @media screen and (min-width: 768px) {
-      font-size: 2rem;
+      font-size: 1.5rem;
+      line-height: 1.5;
     }
   }
 
