--- a/index.njk
+++ b/index.njk
@@ -40,5 +40,11 @@ layout: layouts/default.njk
       if you experience any problems then <a href="https://github.com/HeySugar/hey-sugar-app" target="_blank">raise an issue on our github</a>.
       Better yet, if you want to contribute then Pull Requests are welcome!
     </p>
+
+    <p>
+      <i><b>Please note:</b> HeySugar is still in the very early stages of development and getting started requires
+      some manual process, but we do help you with a step by step video in the Getting Started section of our
+      documentation. This will change in the near future as we continue to work on automating the majority of the setup
+      process.</i></p>
   </div>
 </main>
