--- a/resources/scss/modules/_nav.scss
+++ b/resources/scss/modules/_nav.scss
@@ -10,7 +10,11 @@
   }
 
   .navigation__list-item {
-    margin: 0 1.5rem;
+    margin: 0 .75rem;
+
+    @media screen and (min-width: 1024px) {
+      margin: 0 1.5rem;
+    }
 
     &:last-of-type {
       margin-right: 0;
@@ -24,6 +28,10 @@
   }
 
   .navigation__link {
-    font-size: 1.25rem;
+    font-size: 1rem;
+
+    @media screen and (min-width: 1024px) {
+      font-size: 1.25rem;
+    }
   }
 }
