Added meta description

--- a/_includes/layouts/default.njk
+++ b/_includes/layouts/default.njk
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HeySugar | {% if title %}{{title}}{% else %}Diabetes Management with Jamstack{% endif %}</title>
-    <meta name="Description" content="Site description">
-
+    <meta name="Description" content="HeySugar is an open-source, self hosted, blood sugar management application for type one and type
+      two diabetics.">
     <style>{% include "css/styles.css" %}</style>
   </head>
   <body>
