Added GA tracking

--- a/_includes/layouts/default.njk
+++ b/_includes/layouts/default.njk
@@ -53,5 +53,14 @@
         <p>Project created by <a href="https://bradders.dev" target="_blank">Jamie Bradley</a></p>
       </div>
     </footer>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-93010339-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-93010339-2');
+    </script>
   </body>
 </html>
