Added cookie wording

--- a/_includes/layouts/default.njk
+++ b/_includes/layouts/default.njk
@@ -50,6 +50,7 @@
 
     <footer class="footer">
       <div class="container">
+        <p>We use cookies for analytical purposes on these docs in order to understand areas that require improvement.<br/>We understand that by using this website you acknowledge this.</p>
         <p>Project created by <a href="https://bradders.dev" target="_blank">Jamie Bradley</a></p>
       </div>
     </footer>
